[package]
license = "MIT"
edition = "2021"
version = "0.1.0"
name = "silhouette"
readme = "README.md"
authors = ["Miguel Piedrafita <rust@miguel.build>"]
repository = "https://github.com/m1guelpf/silhouette"
description = "A simple dependency injection library for Rust"

[dependencies]
thiserror = "1.0.51"
try_default = { version = "1.0.1", optional = true }

[dev-dependencies]
serial_test = "2.0.0"

[features]
default = []
nightly = ["dep:try_default"]
